Gama.Antlr/GamaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Gama.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class GamaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, LT=2, GT=3, LE=4, GE=5, EQ=6, NE=7, ADD=8, SUB=9, MUL=10, DIV=11, 
		MOD=12, LP=13, RP=14, LB=15, RB=16, LQ=17, RQ=18, AND=19, OR=20, XOR=21, 
		HASH=22, SC=23, NSDiv=24, Colon=25, Comma=26, Period=27, Equals=28, Namespace=29, 
		Let=30, Operator=31, Using=32, Return=33, Delegate=34, Extern=35, Packed=36, 
		Struct=37, Impl=38, True=39, False=40, Import=41, If=42, Else=43, While=44, 
		Do=45, OpMul=46, OpAdd=47, OpComp=48, OpComparison=49, Symbol=50, StringLiteral=51, 
		CharLiteral=52, FloatingLiteral=53, IntegerLiteral=54, NumericLiteral=55, 
		MultiComment=56, LineComment=57, WhiteSpace=58;
	public const int
		RULE_program = 0, RULE_namespace = 1, RULE_topLevelStatement = 2, RULE_structLevelStatement = 3, 
		RULE_statement = 4, RULE_stmtVarDef = 5, RULE_stmtAssign = 6, RULE_stmtIf = 7, 
		RULE_stmtReturn = 8, RULE_stmtWhile = 9, RULE_stmtFnCall = 10, RULE_topLevelBlock = 11, 
		RULE_block = 12, RULE_expr = 13, RULE_exprList = 14, RULE_topLevelUsingNamespace = 15, 
		RULE_topLevelDelegate = 16, RULE_topLevelExternDef = 17, RULE_topLevelFuncDef = 18, 
		RULE_topLevelStructDef = 19, RULE_topLevelImpl = 20, RULE_symbolTypePairList = 21, 
		RULE_symbolTypePair = 22, RULE_ellipsis = 23, RULE_funcAttr = 24, RULE_symbolList = 25, 
		RULE_opMul = 26, RULE_opAdd = 27, RULE_opComp = 28, RULE_opLogic = 29, 
		RULE_fqtnRoot = 30, RULE_fqtn = 31, RULE_fqtnList = 32, RULE_typeList = 33, 
		RULE_typeName = 34, RULE_ptr = 35;
	public static readonly string[] ruleNames = {
		"program", "namespace", "topLevelStatement", "structLevelStatement", "statement", 
		"stmtVarDef", "stmtAssign", "stmtIf", "stmtReturn", "stmtWhile", "stmtFnCall", 
		"topLevelBlock", "block", "expr", "exprList", "topLevelUsingNamespace", 
		"topLevelDelegate", "topLevelExternDef", "topLevelFuncDef", "topLevelStructDef", 
		"topLevelImpl", "symbolTypePairList", "symbolTypePair", "ellipsis", "funcAttr", 
		"symbolList", "opMul", "opAdd", "opComp", "opLogic", "fqtnRoot", "fqtn", 
		"fqtnList", "typeList", "typeName", "ptr"
	};

	private static readonly string[] _LiteralNames = {
		null, "'...'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'&'", 
		"'|'", "'^'", "'#'", "';'", "'::'", "':'", "','", "'.'", "'='", "'namespace'", 
		"'let'", "'operator'", "'using'", "'return'", "'delegate'", "'extern'", 
		"'packed'", "'struct'", "'impl'", "'true'", "'false'", "'import'", "'if'", 
		"'else'", "'while'", "'do'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "LT", "GT", "LE", "GE", "EQ", "NE", "ADD", "SUB", "MUL", "DIV", 
		"MOD", "LP", "RP", "LB", "RB", "LQ", "RQ", "AND", "OR", "XOR", "HASH", 
		"SC", "NSDiv", "Colon", "Comma", "Period", "Equals", "Namespace", "Let", 
		"Operator", "Using", "Return", "Delegate", "Extern", "Packed", "Struct", 
		"Impl", "True", "False", "Import", "If", "Else", "While", "Do", "OpMul", 
		"OpAdd", "OpComp", "OpComparison", "Symbol", "StringLiteral", "CharLiteral", 
		"FloatingLiteral", "IntegerLiteral", "NumericLiteral", "MultiComment", 
		"LineComment", "WhiteSpace"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Gama.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static GamaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GamaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GamaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(GamaParser.Eof, 0); }
		public NamespaceContext[] @namespace() {
			return GetRuleContexts<NamespaceContext>();
		}
		public NamespaceContext @namespace(int i) {
			return GetRuleContext<NamespaceContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaVisitor<TResult> typedVisitor = visitor as IGamaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Namespace || _la==Import) {
				{
				{
				State = 72; @namespace();
				}
				}
				State = 77;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 78; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceContext : ParserRuleContext {
		public NamespaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace; } }
	 
		public NamespaceContext() { }
		public virtual void CopyFrom(NamespaceContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class NamespaceRootStartContext : NamespaceContext {
		public ITerminalNode Namespace() { return GetToken(GamaParser.Namespace, 0); }
		public FqtnRootContext fqtnRoot() {
			return GetRuleContext<FqtnRootContext>(0);
		}
		public TopLevelBlockContext topLevelBlock() {
			return GetRuleContext<TopLevelBlockContext>(0);
		}
		public NamespaceRootStartContext(NamespaceContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.EnterNamespaceRootStart(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.ExitNamespaceRootStart(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaVisitor<TResult> typedVisitor = visitor as IGamaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceRootStart(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ImportStmtContext : NamespaceContext {
		public ITerminalNode Import() { return GetToken(GamaParser.Import, 0); }
		public ITerminalNode StringLiteral() { return GetToken(GamaParser.StringLiteral, 0); }
		public ITerminalNode SC() { return GetToken(GamaParser.SC, 0); }
		public ImportStmtContext(NamespaceContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.EnterImportStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.ExitImportStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaVisitor<TResult> typedVisitor = visitor as IGamaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NamespaceRootContext : NamespaceContext {
		public ITerminalNode Namespace() { return GetToken(GamaParser.Namespace, 0); }
		public TopLevelBlockContext topLevelBlock() {
			return GetRuleContext<TopLevelBlockContext>(0);
		}
		public NamespaceRootContext(NamespaceContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.EnterNamespaceRoot(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.ExitNamespaceRoot(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaVisitor<TResult> typedVisitor = visitor as IGamaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceRoot(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NamespaceDefaultContext : NamespaceContext {
		public ITerminalNode Namespace() { return GetToken(GamaParser.Namespace, 0); }
		public FqtnContext fqtn() {
			return GetRuleContext<FqtnContext>(0);
		}
		public TopLevelBlockContext topLevelBlock() {
			return GetRuleContext<TopLevelBlockContext>(0);
		}
		public NamespaceDefaultContext(NamespaceContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.EnterNamespaceDefault(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.ExitNamespaceDefault(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaVisitor<TResult> typedVisitor = visitor as IGamaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceDefault(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceContext @namespace() {
		NamespaceContext _localctx = new NamespaceContext(Context, State);
		EnterRule(_localctx, 2, RULE_namespace);
		try {
			State = 93;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				_localctx = new NamespaceDefaultContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 80; Match(Namespace);
				State = 81; fqtn();
				State = 82; topLevelBlock();
				}
				break;
			case 2:
				_localctx = new NamespaceRootStartContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 84; Match(Namespace);
				State = 85; fqtnRoot();
				State = 86; topLevelBlock();
				}
				break;
			case 3:
				_localctx = new NamespaceRootContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 88; Match(Namespace);
				State = 89; topLevelBlock();
				}
				break;
			case 4:
				_localctx = new ImportStmtContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 90; Match(Import);
				State = 91; Match(StringLiteral);
				State = 92; Match(SC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopLevelStatementContext : ParserRuleContext {
		public TopLevelUsingNamespaceContext topLevelUsingNamespace() {
			return GetRuleContext<TopLevelUsingNamespaceContext>(0);
		}
		public TopLevelDelegateContext topLevelDelegate() {
			return GetRuleContext<TopLevelDelegateContext>(0);
		}
		public ITerminalNode SC() { return GetToken(GamaParser.SC, 0); }
		public TopLevelExternDefContext topLevelExternDef() {
			return GetRuleContext<TopLevelExternDefContext>(0);
		}
		public TopLevelFuncDefContext topLevelFuncDef() {
			return GetRuleContext<TopLevelFuncDefContext>(0);
		}
		public TopLevelStructDefContext topLevelStructDef() {
			return GetRuleContext<TopLevelStructDefContext>(0);
		}
		public TopLevelImplContext topLevelImpl() {
			return GetRuleContext<TopLevelImplContext>(0);
		}
		public TopLevelStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topLevelStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.EnterTopLevelStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.ExitTopLevelStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaVisitor<TResult> typedVisitor = visitor as IGamaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTopLevelStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TopLevelStatementContext topLevelStatement() {
		TopLevelStatementContext _localctx = new TopLevelStatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_topLevelStatement);
		try {
			State = 105;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Using:
				EnterOuterAlt(_localctx, 1);
				{
				State = 95; topLevelUsingNamespace();
				}
				break;
			case Delegate:
				EnterOuterAlt(_localctx, 2);
				{
				State = 96; topLevelDelegate();
				State = 97; Match(SC);
				}
				break;
			case Extern:
				EnterOuterAlt(_localctx, 3);
				{
				State = 99; topLevelExternDef();
				State = 100; Match(SC);
				}
				break;
			case LQ:
			case Symbol:
				EnterOuterAlt(_localctx, 4);
				{
				State = 102; topLevelFuncDef();
				}
				break;
			case Packed:
			case Struct:
				EnterOuterAlt(_localctx, 5);
				{
				State = 103; topLevelStructDef();
				}
				break;
			case Impl:
				EnterOuterAlt(_localctx, 6);
				{
				State = 104; topLevelImpl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructLevelStatementContext : ParserRuleContext {
		public StructLevelStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structLevelStatement; } }
	 
		public StructLevelStatementContext() { }
		public virtual void CopyFrom(StructLevelStatementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StructLevelDelegateContext : StructLevelStatementContext {
		public TopLevelDelegateContext topLevelDelegate() {
			return GetRuleContext<TopLevelDelegateContext>(0);
		}
		public ITerminalNode SC() { return GetToken(GamaParser.SC, 0); }
		public StructLevelDelegateContext(StructLevelStatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.EnterStructLevelDelegate(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.ExitStructLevelDelegate(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaVisitor<TResult> typedVisitor = visitor as IGamaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStructLevelDelegate(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StructLevelMethodContext : StructLevelStatementContext {
		public TopLevelFuncDefContext topLevelFuncDef() {
			return GetRuleContext<TopLevelFuncDefContext>(0);
		}
		public StructLevelMethodContext(StructLevelStatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.EnterStructLevelMethod(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.ExitStructLevelMethod(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaVisitor<TResult> typedVisitor = visitor as IGamaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStructLevelMethod(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StructLevelStatementContext structLevelStatement() {
		StructLevelStatementContext _localctx = new StructLevelStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_structLevelStatement);
		try {
			State = 111;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Delegate:
				_localctx = new StructLevelDelegateContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 107; topLevelDelegate();
				State = 108; Match(SC);
				}
				break;
			case LQ:
			case Symbol:
				_localctx = new StructLevelMethodContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 110; topLevelFuncDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StmtVarDefContext stmtVarDef() {
			return GetRuleContext<StmtVarDefContext>(0);
		}
		public ITerminalNode SC() { return GetToken(GamaParser.SC, 0); }
		public StmtAssignContext stmtAssign() {
			return GetRuleContext<StmtAssignContext>(0);
		}
		public StmtIfContext stmtIf() {
			return GetRuleContext<StmtIfContext>(0);
		}
		public StmtWhileContext stmtWhile() {
			return GetRuleContext<StmtWhileContext>(0);
		}
		public StmtFnCallContext stmtFnCall() {
			return GetRuleContext<StmtFnCallContext>(0);
		}
		public StmtReturnContext stmtReturn() {
			return GetRuleContext<StmtReturnContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaListener typedListener = listener as IGamaListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaVisitor<TResult> typedVisitor = visitor as IGamaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_statement);
		try {
			State = 127;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 113; stmtVarDef();
				State = 114; Match(SC);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 116; stmtAssign();
				State = 117; Match(SC);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 119; stmtIf();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 120; stmtWhile();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 121; stmtFnCall();
				State = 122; Match(SC);
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 124; stmtReturn();
				State = 125; Match(SC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
